--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>React sandbox</title>
-    <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js'></script>-->
-    <script src='lib/react.js'></script>
-    <script src='lib/react-dom.js'></script>
 </head>
 
 <body>
     <div id="app">
-
     </div>
-    <script type="text/javascript" src='app.js'></script>
+    <script src='bundle.js'></script>
 </body>
 
 </html>
